# marimo-toml-editor

./: .gitignore  CHANGELOG.md  CONTRIBUTING_ANYWIDGET.md  README.md  pyproject.toml  widget_toml.py
.github/workflows/: publish.yml
examples/: demo.py  demo.toml
examples/__marimo__/session/: demo.py.json
src/marimo_toml_editor/: __init__.py  _widget.py
src/marimo_toml_editor/static/: widget.css  widget.js
